fix: correct relevant paths

--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, you are on donate page. This page isn't ready. <a href="/index.html">Go back to main page</a></h1>
+    <h1>Hello, you are on donate page. This page isn't ready. <a href="index.html">Go back to main page</a></h1>
     
 </body>
 <style>
