fix: correct slide up effect

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -56,8 +56,8 @@
                         <section class="card-list">
                             <ul class="card card-wrapper">
                                 <li class="card-img">
-                                    <img class="scale black-bg" src="./assets/img/pandas.jpg" alt="panda"/>
-                                    <div class="title-img fade slide-up">
+                                    <img class="scale " src="./assets/img/pandas.jpg" alt="panda"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>GIANT PANDAS</p>
                                         <p>Native to Southwest China</p>
                                     </div>
@@ -71,9 +71,8 @@
                                 </li>
                             </ul>
                             <ul class="card card-wrapper">
-                                <li class="card-img">
-                                    <li class="card-img"><img class="scale black-bg" src="./assets/img/eagle.jpg" alt="eagle"/>
-                                    <div class="title-img fade slide-up">
+                                <li class="card-img"><img class="scale " src="./assets/img/eagle.jpg" alt="eagle"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>Eagles</p>
                                         <p>Native to South America</p>
                                     </div>
@@ -87,8 +86,8 @@
                                 </li>
                             </ul>
                             <ul class="card">
-                                <li class="card-img"><img class="scale black-bg" src="./assets/img/gorilla.jpg" alt="gorilla"/>
-                                    <div class="title-img fade slide-up">
+                                <li class="card-img"><img class="scale " src="./assets/img/gorilla.jpg" alt="gorilla"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>Gorillas</p>
                                         <p>Native to Congo</p>
                                     </div>
@@ -102,8 +101,8 @@
                                 </li>
                             </ul>
                             <ul class="card">
-                                <li class="card-img"><img class="scale black-bg" src="./assets/img/sloth.jpg" alt="sloth"/>
-                                    <div class="title-img fade slide-up">
+                                <li class="card-img"><img class="scale" src="./assets/img/sloth.jpg" alt="sloth"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>Two-toed Sloth</p>
                                         <p>Mesoamerica, South America</p>
                                     </div>
@@ -117,8 +116,8 @@
                                 </li>
                             </ul>
                             <ul class="card">
-                                <li class="card-img"><img class="scale black-bg" src="./assets/img/cheetans.jpg" alt="cheetans"/>
-                                    <div class="title-img fade slide-up">
+                                <li class="card-img"><img class="scale" src="./assets/img/cheetans.jpg" alt="cheetans"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>Cheetahs</p>
                                         <p>Native to Africa</p>
                                     </div>
@@ -132,8 +131,8 @@
                                 </li>
                             </ul>
                             <ul class="card">
-                                <li class="card-img"><img class="scale black-bg" src="./assets/img/penguins.jpg" alt="penguin"/>
-                                    <div class="title-img fade slide-up">
+                                <li class="card-img"><img class="scale" src="./assets/img/penguins.jpg" alt="penguin"/>
+                                    <div class="title-img fade slide-up black-bg">
                                         <p>Penguins</p>
                                         <p>Native to Antarctica</p>
                                     </div>
