--- a/online-zoo-2/pages/donate/index.html
+++ b/online-zoo-2/pages/donate/index.html
@@ -50,14 +50,14 @@
                             <div class="amount-wrap">
                                 <div class="range-wrap">
                                     <ul class="range">
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class="active"><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
-                                        <li class=""><span class="roller-icon"></span></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="5000" name="amount-pay" value="5000"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="2000" name="amount-pay" value="2000"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="1000" name="amount-pay" value="1000"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="500" name="amount-pay" value="500"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="250" name="amount-pay" value="250"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="100" name="amount-pay" value="100"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="50" name="amount-pay" value="50"></li>
+                                        <li class=""> <input class="amount-radio" type="radio" id="25" name="amount-pay" value="25"></li>
                                     </ul>
                                 </div>
                                 <ul class="sum">
