refactor: correct links

--- a/online-zoo-2/index.html
+++ b/online-zoo-2/index.html
@@ -17,7 +17,7 @@
                         <li class="active about"><a href="#" onclick="toggleClassActive('about')">About</a></li>
                         <li class="map"><a onclick="toggleClassActive('map')">Map</a></li>
                         <li class="zoos"><a onclick="toggleClassActive('zoos')">Zoos</a> </li>
-                        <li class="donate"><a href="donate.html" onclick="toggleClassActive('donate')">Donate</a></li>
+                        <li class="donate"><a href="pages/donate/index.html" onclick="toggleClassActive('donate')">Donate</a></li>
                         <li class="contact"><a onclick="toggleClassActive('contact')" href="#contact">Contact us</a></li>
                     </ul>
                     <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks" target="_blank" class="disigned">Designed by ©</a>
