--- a/online-zoo-2/pages/donate/index.html
+++ b/online-zoo-2/pages/donate/index.html
@@ -14,10 +14,10 @@
                 <div class="wrapper">
                     <h1 class="logo"><a href="#about" onclick="toggleClassActive('about')">PetStory online</a></h1>
                     <ul class="links">
-                        <li class="about"><a href="#" onclick="toggleClassActive('about')">About</a></li>
+                        <li class="about"><a href="../../index.html" onclick="toggleClassActive('about')">About</a></li>
                         <li class="map"><a onclick="toggleClassActive('map')">Map</a></li>
                         <li class="zoos"><a onclick="toggleClassActive('zoos')">Zoos</a> </li>
-                        <li class="active donate"><a href="donate.html" onclick="toggleClassActive('donate')">Donate</a></li>
+                        <li class="active donate"><a href="#" onclick="toggleClassActive('donate')">Donate</a></li>
                         <li class="contact"><a onclick="toggleClassActive('contact')" href="#contact">Contact us</a></li>
                     </ul>
                     <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks" target="_blank" class="disigned">Designed by ©</a>
