--- a/books-shop/index.html
+++ b/books-shop/index.html
@@ -14,7 +14,7 @@
             <h1 class="title-shop">books shop</h1>
             <nav class="nav-panel">
                 <div class="user-info">
-                    <a href="" class="card__icon"><ion-icon name="cart-outline"></ion-icon><span>12</span></a> 
+                    <a href="" class="card__icon cart"><ion-icon name="cart-outline"></ion-icon><span class="cart_items">0</span></a> 
                     <a href="" class="card__icon"><ion-icon name="heart-outline"></ion-icon><span>0</span></a>
                 </div>
             </nav>
@@ -29,3 +29,18 @@
 
 </body>
 </html>
+<!-- <article class="card">
+    <div class="card__img">
+        <img src="https://s3.amazonaws.com/AKIAJC5RLADLUMVRPFDQ.book-thumb-images/black.jpg">
+    </div>
+    <div class="card__name"><p class="show_more">SHOW MORE</p></div>
+    <p class="card_authors">David A. Black</p>
+    <p class="card_title">Ruby for Rails</p>
+    <div class="card__precis card__preci--now">
+        <a class="card__icon"><ion-icon name="cart-outline" role="img" class="md hydrated" aria-label="cart outline"></ion-icon></a>
+        <div class="card_price">
+            <span>$990.00</span>
+        </div>
+        <a class="card__icon"><ion-icon name="heart-outline" role="img" class="md hydrated" aria-label="heart outline"></ion-icon></a>
+    </div>
+</article> -->
