--- a/books-shop/index.html
+++ b/books-shop/index.html
@@ -65,7 +65,7 @@
                 <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
                 <label for="tab-1" class="tab-label">Your Order List</label>
                 <div class="tab-content">
-                    <div class="book-list">
+                    <div class="book-list order_list">
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
                 <label for="tab-2" class="tab-label">Your Favaurite List</label>
                 <div class="tab-content">
-                    <div class="book-list">
+                    <div class="book-list like_list">
                         <div>#</div>
                         <div>Item</div>
                         <div>Amount</div>
