fix: correct link to donate page

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -141,7 +141,7 @@
                         </li>
                     </ul>
                     <div class="btn-donate">
-                        <a type="button" class="default border-r-5" href="/pages/donate/index.html" class="border-o">donate for volunteers</a>
+                        <a type="button" class="default border-r-5" href="index.html" class="border-o">donate for volunteers</a>
                     </div>
                     <div class="info">
                         <ul>
