--- a/books-shop/index.html
+++ b/books-shop/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header_container">
-            <h1 class="title-shop">books shop</h1>
+            <h1 class="title-shop"><a href="/index.html">books shop</a></h1>
             <nav class="nav-panel">
                 <div class="user-info">
                     <a  class="card__icon cart" onclick="cardsService.showBookLists(this)"><ion-icon name="cart-outline"></ion-icon><span class="cart_items">0</span></a> 
