--- a/books-shop/delivery-form.html
+++ b/books-shop/delivery-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/delivery-form.css">
     <title>Delivery form</title>
 </head>
@@ -13,8 +14,7 @@
             <h1 class="title-shop"><a href="/index.html">books shop</a></h1>
             <nav class="nav-panel">
                 <div class="user-info">
-                    <a  class="card__icon cart" onclick=""><ion-icon name="cart-outline"></ion-icon><span class="cart_items">0</span></a> 
-                    <a href="" class="card__icon"><ion-icon name="heart-outline"></ion-icon><span class="like_items">0</span></a>
+                    <a  class="card__icon cart" onclick=""> <i class='bx bx-cart-alt'></i><span class="cart_items">0</span></a> 
                 </div>
             </nav>
         </div>
@@ -119,8 +119,7 @@
     </main>
 
 
- <!--ICONS-->
- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-<script src="./delivery-form.js"></script>
+
+<script src="./assets/js/delivery-form.js"></script>
 </body>
 </html>
