--- a/books-shop/delivery-form.html
+++ b/books-shop/delivery-form.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header_container">
-            <h1 class="title-shop"><a href="/index.html">books shop</a></h1>
+            <h1 class="title-shop"><a href="./index.html">books shop</a></h1>
             <nav class="nav-panel">
                 <div class="user-info">
                     <a class="card__icon cart" onclick="">
